crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__utils__tests__generate_localize_label_impl_explicit_domain_override.snap
---
source: crates/es-fluent-derive/src/macros/utils.rs
expression: tokens
---
impl ::es_fluent::FluentLabel for Languages {
    fn fluent_label_key() -> ::es_fluent::registry::StaticFluentMessageKey {
        {
            ::es_fluent::registry::__macro::static_message_key(
                env!("CARGO_PKG_NAME"),
                ::es_fluent::registry::__macro::static_domain("es-fluent-lang"),
                ::es_fluent::registry::__macro::static_entry_id("es-fluent-lang-label"),
            )
        }
    }
}
