crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__utils__tests__generate_localize_label_impl_fallback_str_policy.snap
---
source: crates/es-fluent-derive/src/macros/utils.rs
expression: tokens
---
impl ::es_fluent::FluentLabel for Greeting {
    fn fluent_label_key() -> ::es_fluent::registry::StaticFluentMessageKey {
        {
            ::es_fluent::registry::__macro::static_message_key_with_fallback(
                env!("CARGO_PKG_NAME"),
                ::es_fluent::registry::StaticFluentDomain::from_package_name(
                    env!("CARGO_PKG_NAME"),
                ),
                ::es_fluent::registry::__macro::static_entry_id("hello"),
                "greeting",
            )
        }
    }
}
