crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__utils__tests__generate_this_ftl_impl_current_crate_domain.snap
---
source: crates/es-fluent-derive/src/macros/utils.rs
assertion_line: 455
expression: tokens
---
impl ::es_fluent::ThisFtl for Greeting {
    fn this_ftl<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_this(localizer, env!("CARGO_PKG_NAME"), "hello")
    }
}
