crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__utils__tests__generate_this_ftl_impl_explicit_domain_override.snap
---
source: crates/es-fluent-derive/src/macros/utils.rs
expression: tokens
---
impl ::es_fluent::ThisFtl for Languages {
    fn this_ftl() -> String {
        ::es_fluent::localize_in_domain("es-fluent-lang", "es-fluent-lang-this", None)
    }
}
